# ai-hiring

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml
.github/workflows/: deploy.yml  keep_alive.yml
src/: main.py
src/api/: router.py
src/api/v1/: applications.py  candidates.py  file.py  health.py  interviews.py  jobs.py  schemas.py
src/core/: client.py  config.py  dependencies.py  lifecycle.py
src/models/: application.py  candidate.py  interview.py  job.py  llm.py
src/repository/: application_repository.py  candidate_repository.py  file_repository.py  interview_repository.py  job_repository.py
src/service/: candidate_service.py  file_service.py  interview_service.py  job_service.py  llm_provider.py  matching_service.py  resume_parser.py
