[project]
name = "ai-hiring"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.139.0",
    "google-genai>=2.11.0",
    "greenlet>=3.5.3",
    "groq>=1.5.0",
    "pydantic-settings>=2.14.2",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "supabase>=2.31.0",
    "uvicorn>=0.51.0",
]
